--- a/pages/track.html
+++ b/pages/track.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Track</title>
+    
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -14,6 +15,15 @@
     </nav>
    </header>
     <h1 class="br">Books I Have Read</h1>
+    <p><input type="text" name="" value="">
+        <button type="button" name="button">Enter ISBN of Book Read</button>
+    </p>
+    <h3>Books I've Read</h3>
+    <div id="div1"> Book read</div>
+    <ul>
+        <li></li>
+    </ul>
     
+    <script type="text/javascript" src="../js/main.js"></script>
 </body>
 </html>
