--- a/pages/track.html
+++ b/pages/track.html
@@ -20,9 +20,22 @@
     </p>
     <h3>Books I've Read</h3>
     <div id="div1"> Book read</div>
-    <ul>
-        <li></li>
-    </ul>
+    <div class="row">
+        <div class="column" id="div2">
+            <h2>Book Title</h2>
+            <ul>
+                <li></li>
+            </ul>
+        </div>
+        <div class="column">
+            <h2>Completed</h2>
+            <button>Yes</button>
+        </div>
+
+    </div>
+    
+  
+
     
     <script type="text/javascript" src="../js/main.js"></script>
 </body>
