--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 </section>
 
 <section class="s2">
-    <div class="div1">Favorites</div>
-    <div class="div2">Want to Read</div>
-    <div class="div3">Read</div>
+    <div id="rank">Rank</div>
+    <div id="nyt">Book Title</div>
+    <div id="bb">Buy the book Here</div>
     
 </section>
 
