--- a/pages/track.html
+++ b/pages/track.html
@@ -19,9 +19,9 @@
         <button type="button" name="button">Enter ISBN of Book Read</button>
     </p>
     <h3>Books I've Read</h3>
-    <div id="div1"> Book read</div>
+    <div id="col1"> Book read</div>
     <div class="row">
-        <div class="column" id="div2">
+        <div class="column" id="col2">
             <h2>Book Title</h2>
             <ul>
                 <li></li>
