--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     </p>
 </section>
 
+<h1 class="nytHead">NYT Best Sellers</h1>
 <section class="s2">
+    
     <div id="rank">Rank</div>
     <div id="nyt">Book Title</div>
     <div id="bb">Buy the book Here</div>
