--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 </section>
 
 <h1 class="nytHead">NYT Best Sellers</h1>
-<section class="s2">
+<div id="date">Week of: </div>
+<section class="s2 column">
     
     <div id="rank">Rank</div>
     <div id="nyt">Book Title</div>
