--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
     <div id="rank">Rank</div>
     <div id="nyt">Book Title</div>
-    <div id="bb">Buy the book Here</div>
+    <div id="bb">Last Weeks Rank</div>
     
 </section>
 
