--- a/index.html
+++ b/index.html
@@ -30,13 +30,25 @@
 
 <h1 class="nytHead">NYT Best Sellers</h1>
 <div id="date">Week of: </div>
-<section class="s2 column">
+
+<table class="s2 column">
+    <colgroup>
+        <col span="3">
+
+      </colgroup>
+    <tr>
+      <th id="rank" class="row">Rank</th>
+      <th id="nyt" class="row">Book Title</th>
+      <th id="bb" class="row">Last Weeks Rank</th>
+    </tr>
+</table>
+<!-- <section class="s2 column"> -->
     
-    <div id="rank">Rank</div>
-    <div id="nyt">Book Title</div>
-    <div id="bb">Last Weeks Rank</div>
+    <!-- <div id="rank" class="row">Rank</div> -->
+    <!-- <div id="nyt" class="row">Book Title</div> -->
+    <!-- <div id="bb" class="row">Last Weeks Rank</div> -->
     
-</section>
+<!-- </section> -->
 
 
 </body>
